# water-management

./: .gitignore  CMakeLists.txt  README.md  build  install  run
Data/: Pipes.csv
SmallDataSet/: Cities_Madeira.csv  Reservoirs_Madeira.csv  Stations_Madeira.csv
docs/: Doxyfile
docs/output/html/: _balance_buffer_8cpp.html  _balance_buffer_8h.html  _balance_buffer_8h_source.html  _basic_metrics_buffer_8cpp.html  _basic_metrics_buffer_8h.html  _basic_metrics_buffer_8h_source.html  _buffer_8cpp.html  _buffer_8h.html  _buffer_8h_source.html  _city_8cpp.html  _city_8h.html  _city_8h_source.html  _color_8cpp.html  _color_8h.html  _color_8h_source.html  _color_pair_8cpp.html  _color_pair_8h.html  _color_pair_8h_source.html  _component_8cpp.html  _component_8h.html  _component_8h_source.html  _data_manager_8cpp.html  _data_manager_8h.html  _data_manager_8h_source.html  _data_reader_8cpp.html  _data_reader_8h.html  _data_reader_8h_source.html  _edge_8cpp.html  _edge_8h.html  _edge_8h_source.html  _export_buffer_8cpp.html  _export_buffer_8h.html  _export_buffer_8h_source.html  _failure_buffer_8cpp.html  _failure_buffer_8h.html  _failure_buffer_8h_source.html  _graph_8cpp.html  _graph_8h.html  _graph_8h_source.html  _input_box_8cpp.html  (+162 more)
docs/output/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  (+69 more)
src/: Cities.cpp  Cities.h  City.cpp  City.h  DataProcessor.cpp  DataProcessor.h  Graph.cpp  Graph.h  Reservoir.cpp  Reservoir.h  balanceTest.h  main.cpp  minHeap.h  test.h
src/BaseClasses/: City.cpp  City.h  Pipe.cpp  Pipe.h  Pump.cpp  Pump.h  Reservoir.cpp  Reservoir.h  Station.cpp  Station.h
src/DataManagement/: DataManager.cpp  DataManager.h  DataReader.cpp  DataReader.h
src/GraphClasses/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  StaticGraph.cpp  StaticGraph.h  Vertex.cpp  Vertex.h
src/ui/: Box.cpp  Box.h  Component.cpp  Component.h  InputLabel.cpp  KeysBindings.h  TextBox.cpp  TextBox.h  TextLabel.cpp  TextLabel.h
src/ui/colors/: Color.cpp  Color.h  ColorPair.cpp  ColorPair.h
src/ui/components/: Box.cpp  Box.h  Cmdline.cpp  Cmdline.h  Component.cpp  Component.h  InputBox.cpp  InputBox.h  InputLabel.cpp  InputLabel.h  KeysBindings.h  MultiComponent.cpp  MultiComponent.h  OptionMenu.cpp  OptionMenu.h  SearchBox.cpp  SearchBox.h  TextBox.cpp  TextBox.h  TextLabel.cpp  TextLabel.h
src/ui/menus/: BalanceBuffer.cpp  BalanceBuffer.h  BasicMetricsBuffer.cpp  BasicMetricsBuffer.h  Buffer.cpp  Buffer.h  ExportBuffer.cpp  ExportBuffer.h  FailureBuffer.cpp  FailureBuffer.h  MainBuffer.cpp  MainBuffer.h  Menu.cpp  Menu.h  ReservoirBuffer.cpp  ReservoirBuffer.h  ReservoirMenu.cpp  ReservoirMenu.h
src/ui/pallets/: gruvbox.h
